@@ -1,4 +1,7 @@
-$Id: Changelog.txt,v 1.42 2015/08/06 13:16:58 nanard Exp $
+$Id: Changelog.txt,v 1.43 2015/08/06 14:05:49 nanard Exp $
+
+2015/08/06:
+	disable multicast loop
 
 VERSION 1.4:
 
